# nonogram-solver

./: .gitignore  CMakeLists.txt  main.cpp  not_main.cpp  run_tests.sh
src/: CMakeLists.txt  nonogram.cpp  nonogram.hpp  nonogram_utils.hpp  population.cpp  population.hpp
src/test/: CMakeLists.txt  nonogram_test.cpp
